removed unnecessary pictures

--- a/finance/templates/cashflow/index.html
+++ b/finance/templates/cashflow/index.html
@@ -106,7 +106,7 @@ footer {
 </style>
 </head>
 <body>
-
+<h1>Goals and Plan 2024</h1>
 
 <header>
     <img src="{% static 'images/custom.gif' %}" alt="Animated GIF" class="left-image" width="100" height="100">
